split CI jobs for pdfLaTeX and XeLaTeX

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,26 @@
 stages:
-  - build
+  - test-build-latex
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
   SOURCE_NAME: main
 
-build:
-  stage: build
+build-pdflatex:
+  stage: test-build-latex
   image: texlive/texlive:latest
   script:
-  - latexmk -pdf -bibtex -gg  -jobname=%A-pdflatex $SOURCE_NAME.tex
-  - latexmk -pdfxe -bibtex -gg -jobname=%A-xelatex $SOURCE_NAME.tex
+  - latexmk -pdf -bibtex -gg -jobname=%A-pdflatex $SOURCE_NAME.tex
   artifacts:
     paths:
     - ./$SOURCE_NAME-pdflatex.pdf
     - ./$SOURCE_NAME-pdflatex.log
+
+build-xelatex:
+  stage: test-build-latex
+  image: texlive/texlive:latest
+  script:
+  - latexmk -pdfxe -bibtex -gg -jobname=%A-xelatex $SOURCE_NAME.tex
+  artifacts:
+    paths:
     - ./$SOURCE_NAME-xelatex.pdf
     - ./$SOURCE_NAME-xelatex.log
