--- a/.github/workflows/test-build-latex.yml
+++ b/.github/workflows/test-build-latex.yml
@@ -19,10 +19,10 @@ jobs:
         latexmk -pdf -bibtex -gg -jobname=%A-pdflatex $SOURCE_NAME.tex
     - uses: actions/upload-artifact@v2
       with:
-        name: $SOURCE_NAME-pdflatex
+        name: ${{ env.SOURCE_NAME }}-pdflatex
         path: |
-          $SOURCE_NAME-pdflatex.pdf
-          $SOURCE_NAME-pdflatex.log
+          ${{ env.SOURCE_NAME }}-pdflatex.pdf
+          ${{ env.SOURCE_NAME }}-pdflatex.log
   
   build-xelatex:
     runs-on: ubuntu-latest
@@ -37,7 +37,7 @@ jobs:
         latexmk -pdfxe -bibtex -gg -jobname=%A-xelatex $SOURCE_NAME.tex
     - uses: actions/upload-artifact@v2
       with:
-        name: $SOURCE_NAME-xelatex
+        name: ${{ env.SOURCE_NAME }}-xelatex
         path: |
-          $SOURCE_NAME-xelatex.pdf
-          $SOURCE_NAME-xelatex.log
+          ${{ env.SOURCE_NAME }}-xelatex.pdf
+          ${{ env.SOURCE_NAME }}-xelatex.log
