add more build artifacts to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 *.blg
 *.bcf
 *.cut
+*.fdb_latexmk
+*.fls
 *.glo
 *.gls
 *.idx
@@ -20,6 +22,8 @@
 *.thm
 *.toc
 *.vrb
+*.xdv
 .~*#
 *~
 /main.pdf
+/main-*.pdf
