align github actions with github.com:michaelroland/jku-templates-report-latex

--- a/.github/workflows/test-build-latex.yml
+++ b/.github/workflows/test-build-latex.yml
@@ -8,36 +8,24 @@ env:
 jobs:
   build-pdflatex:
     runs-on: ubuntu-latest
-    container: texlive/texlive:latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: true
-        fetch-depth: 0
-    - name: Build pdfLaTeX
-      run: |
-        latexmk -pdf -bibtex -gg -jobname=%A-pdflatex $SOURCE_NAME.tex
-    - uses: actions/upload-artifact@v2
+    - uses: ./.github/actions/latexmk-and-output
       with:
-        name: ${{ env.SOURCE_NAME }}-pdflatex
-        path: |
-          ${{ env.SOURCE_NAME }}-pdflatex.pdf
-          ${{ env.SOURCE_NAME }}-pdflatex.log
+        job_engine: pdf
+        job_source: ${{ env.SOURCE_NAME }}
+        job_artifact_suffix: -pdflatex
   
   build-xelatex:
     runs-on: ubuntu-latest
-    container: texlive/texlive:latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: true
-        fetch-depth: 0
-    - name: Build XeLaTeX
-      run: |
-        latexmk -pdfxe -bibtex -gg -jobname=%A-xelatex $SOURCE_NAME.tex
-    - uses: actions/upload-artifact@v2
+    - uses: ./.github/actions/latexmk-and-output
       with:
-        name: ${{ env.SOURCE_NAME }}-xelatex
-        path: |
-          ${{ env.SOURCE_NAME }}-xelatex.pdf
-          ${{ env.SOURCE_NAME }}-xelatex.log
+        job_engine: pdfxe
+        job_source: ${{ env.SOURCE_NAME }}
+        job_artifact_suffix: -xelatex
